Import of HARTZELL/Dist-Zilla-PluginBundle-HARTZELL-0.005 from CPAN.
gitpan-cpan-distribution: Dist-Zilla-PluginBundle-HARTZELL
gitpan-cpan-version:      0.005
gitpan-cpan-path:         HARTZELL/Dist-Zilla-PluginBundle-HARTZELL-0.005.tar.gz
gitpan-cpan-author:       HARTZELL
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 NAME
-    Dist::Zilla::PluginBundle::HARTZELL - Implement hartzell's way.
+    Dist::Zilla::PluginBundle::HARTZELL - My standard dzil config.
 
 VERSION
-    version 0.004
+    version 0.005
 
 SYNOPSIS
        # in dist.ini
