--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     Dist::Zilla::PluginBundle::HARTZELL - My standard dzil config.
 
 VERSION
-    version 0.006
+    version 0.007
 
 SYNOPSIS
        # in dist.ini
@@ -38,7 +38,7 @@ DESCRIPTION
        ; file modifications
        [PkgVersion]        ; add $VERSION = ... to all files
        [PodWeaver]         ; generate Pod
-       config_plugin = @DEFAULT
+       config_plugin = @HARTZELL
  
        ; generated files
        [ReadmeFromPod]     ; from Pod (runs after PodWeaver)
@@ -238,7 +238,7 @@ ATTRIBUTES
 
   weaver_config
     Moose Str attribute, controls the name of the PodWeaver configuration.
-    Defaults to '@Default', controlled by the value of the 'weaver_config'
+    Defaults to '@HARTZELL', controlled by the value of the 'weaver_config'
     dist.ini option.
 
     Do this:
@@ -279,8 +279,10 @@ SEE ALSO
 
     *   Dist::Zilla::PluginBundle::ConfigSlicer
 
-AUTHOR
-    George Hartzell <hartzell@cpan.org>
+AUTHORS
+    *   George Hartzell <hartzell@cpan.org>
+
+    *   David Golden <dagolden@cpan.org>
 
 COPYRIGHT AND LICENSE
     This software is copyright (c) 2013 by George Hartzell.
